# memtailor

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  license.txt
src/memtailor/: Arena.h  MemoryBlocks.h
src/test/: gtestInclude.cpp
